# koi

./: CMakeLists.txt  Koi.cloc  ast.h  basic.koi  build.bat  bytecode.cpp  bytecode.h  cfunc.koi  context.cpp  context.h  if_test.koi  koi  lexer.cpp  lexer.h  main.cpp  output.c  output.koic  parser.cpp  parser.h  readkoic.cpp  small.koi  spec.txt  test  test.koi  todo.txt
doc/: notes.txt  spec.txt  todo.txt
include/: ast.h  bytecode.h  cbuilder.h  context.h  lexer.h  llvmbuilder.h  parser.h
koistd/: CMakeLists.txt  Makefile  cmake_install.cmake  macros.h  print.c  sdl.c
src/: bytecode.cpp  cbuilder.cpp  context.cpp  koi  lexer.cpp  llvmbuilder.cpp  main.cpp  parser.cpp
tests/: cfunc.koi  output.koic  print_char.koi  sdl_test.koi  small.koi  test.koi  testifreturn.koi
